# interview-tracking

./: .gitignore  README.md  figure.html  pyproject.toml
.github/workflows/: tests.yml
data/: data.json
src/interview_tracking/: cli.py  entry.py  graph.py  io.py  main.py  node.py  persistance.py  stage.py  types.py
src/interview_tracking/graph/: graph.py
src/interview_tracking/persistance/: __init__.py
src/interview_tracking/subcommands/: __init__.py  entry.py  stage.py
src/interview_tracking/types/: types.py
tests/graph/: test_graph.py
tests/subcommands/: test_entry.py  test_stage.py
