[project]
name = "interview-tracking"
version = "0.1.0"
description = ""
authors = [
    {name = "Gérard Lichtert",email = "gerard.lichtert@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly (>=6.6.0,<7.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "polars (>=1.39.3,<2.0.0)",
    "kaleido (>=1.2.0,<2.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "interview_tracking", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
tracker = "interview_tracking.cli:app"
