[project]
name = "interview-tracking"
version = "0.1.0"
description = ""
authors = [
    { name = "Gérard Lichtert", email = "gerard.lichtert@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotly>=6.6.0,<7.0.0",
    "pandas>=3.0.1,<4.0.0",
    "polars>=1.39.3,<2.0.0",
    "kaleido>=1.2.0,<2.0.0",
    "typer>=0.24.1,<0.25.0",
]

[project.scripts]
tracker = "interview_tracking.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
